; ModuleID = '/home/carl/AnghaBench/lab/engine/code/renderergl2/extr_tr_extramath.c_SpheresIntersect.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/renderergl2/extr_tr_extramath.c_SpheresIntersect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@qtrue = common dso_local global i32 0, align 4
@qfalse = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @SpheresIntersect(i32 %0, float %1, i32 %2, float %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca float, align 4
  %8 = alloca i32, align 4
  %9 = alloca float, align 4
  %10 = alloca float, align 4
  %11 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store float %1, float* %7, align 4
  store i32 %2, i32* %8, align 4
  store float %3, float* %9, align 4
  %12 = load float, float* %7, align 4
  %13 = load float, float* %9, align 4
  %14 = fadd float %12, %13
  store float %14, float* %10, align 4
  %15 = load i32, i32* %6, align 4
  %16 = load i32, i32* %8, align 4
  %17 = load i32, i32* %11, align 4
  %18 = call i32 @VectorSubtract(i32 %15, i32 %16, i32 %17)
  %19 = load i32, i32* %11, align 4
  %20 = load i32, i32* %11, align 4
  %21 = call float @DotProduct(i32 %19, i32 %20)
  %22 = load float, float* %10, align 4
  %23 = load float, float* %10, align 4
  %24 = fmul float %22, %23
  %25 = fcmp ole float %21, %24
  br i1 %25, label %26, label %28

26:                                               ; preds = %4
  %27 = load i32, i32* @qtrue, align 4
  store i32 %27, i32* %5, align 4
  br label %30

28:                                               ; preds = %4
  %29 = load i32, i32* @qfalse, align 4
  store i32 %29, i32* %5, align 4
  br label %30

30:                                               ; preds = %28, %26
  %31 = load i32, i32* %5, align 4
  ret i32 %31
}

declare dso_local i32 @VectorSubtract(i32, i32, i32) #1

declare dso_local float @DotProduct(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
